# ccinp-extractor

./: Cargo.toml  README.md
src/: main.rs
